Fix spacing

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -1,6 +1,6 @@
 .Doorkey-container {
 
-  max-width: 1523px;
+  max-width: 700px;
 
   .Doorkeys {
     margin-top: 20px;
